crates/tmc-langs-cli/tests/snapshots/integration__compress_project_zstd@java__ant-exercise-2.snap
---
source: crates/tmc-langs-cli/tests/integration.rs
expression: files
input_file: sample_exercises/java/ant-exercise
---
- ant-exercise
- ant-exercise/src
- ant-exercise/src/Arith.java
