crates/tmc-langs-cli/tests/snapshots/integration__compress_project_zstd@java__maven-exercise-model-2.snap
---
source: crates/tmc-langs-cli/tests/integration.rs
expression: files
input_file: sample_exercises/java/maven-exercise-model
---
- maven-exercise-model
- maven-exercise-model/src
- maven-exercise-model/src/main
- maven-exercise-model/src/main/java
- maven-exercise-model/src/main/java/fi
- maven-exercise-model/src/main/java/fi/helsinki
- maven-exercise-model/src/main/java/fi/helsinki/cs
- maven-exercise-model/src/main/java/fi/helsinki/cs/maventest
- maven-exercise-model/src/main/java/fi/helsinki/cs/maventest/App.java
