crates/tmc-langs-cli/tests/snapshots/integration__compress_project_zstd@java__maven-exercise.snap
---
source: crates/tmc-langs-cli/tests/integration.rs
expression: output
input_file: sample_exercises/java/maven-exercise
---
output-kind: output-data
status: finished
message: compressed project from [PATH] to [PATH]
result: executed-command
data:
  output-data-kind: compressed-project-hash
  output-data: 2983d5af253f34189f38f797bf5007e81967742d6b39b6a7b52e7866011e21b9

